--- a/src/style.css
+++ b/src/style.css
@@ -1,1 +1,13 @@
 @import "~bootstrap/dist/css/bootstrap.min.css";
+
+body {
+  background-color: green;
+}
+
+.card {
+  justify-content: center;
+  align-content: center;
+  height: 500px;
+  width: 390px;
+  border-radius: 10px;
+}
